testsuite/tests/typecheck/should_fail/tcfail033.hs
-- from Jon Hill
module ShouldFail where

buglet = [ x | (x,y) <- buglet ]
