testsuite/tests/typecheck/should_fail/tcfail033.stderr

tcfail033.hs:4:12: error:
    Occurs check: cannot construct the infinite type: t0 ~ (t0, t1)
    Relevant bindings include
      y :: t1 (bound at tcfail033.hs:4:19)
      x :: t0 (bound at tcfail033.hs:4:17)
      buglet :: [(t0, t1)] (bound at tcfail033.hs:4:1)
    In the expression: x
    In the expression: [x | (x, y) <- buglet]
